tests/error/modifier_errors/captured_classical_modified_nested.err
Error: Variable assigned in modifier block (at $FILE:12:11)
   | 
10 |         with control(q):
11 |             x += 1
12 |     return x
   |            ^ `x` cannot be used...

Note:
   | 
10 |         with control(q):
11 |             x += 1
   |             ------ ... since it was defined in a modifier block

Help: Variables assigned inside a modifier block are not available outside the
block

Guppy compilation failed due to 1 previous error
